# coilcalc

./: LICENSE  README.md  requirements.txt  setup.cfg
coilcalc/: __init__.py  _off_axis_loop.py  _signals.py  calculations.py  core.py  plotting.py  templates.py
examples/: helmholtz_coil.py  helmholtz_coil_from_template.py  optimization.py
src/coilcalc/: _current_sheet.py  _loop_calc_dennison.py  _off_axis_loop.py  calculations.py  core.py  plotting.py  templates.py
src/magcoilcalc/: __init__.py  _mpl_wrap.py  _off_axis_loop.py  _signals.py  _version.py  core.py  plotting.py  templates.py
tests/: rand.npy  test_calculations.py  test_currentloop.py  test_currentsheet.py  test_jit_currentsheet.py  test_loop_backend.py  test_magnet.py  test_mesh.py  test_parameter_scan.py  test_source_collection.py  test_task.py  test_templates.py
