[metadata]
# replace with your username:
name = coilcalc
version = 0.7.0
author = Siqin Meng
author_email = mengsq04@gmail.com
description = Axisymmetric circular current coils field calculator
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sq-meng/coilcalc
project_urls =
    Bug Tracker = https://github.com/sq-meng/coilcalc
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = coilcalc
python_requires = >=3.5
zip_safe = False
install_requires =
    numpy >= 1.1
    matplotlib >=2.0